welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: ';' expected but 'else' found.
  }else{
   ^